[project]
name = "Whimsy"
version = "0.0.0"
description = "收集一些在学习 & 工作过程中突发的奇思妙想~"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["pre-commit>=4.1.0", "pyright>=1.1.396"]

[tool.pyright]
exclude = [
    ".git/",
    ".venv/",
    "venv/",
    "__pycache__/",
    "build/",
    ".mypy_cache/",
    ".pytest_cache/",
    "migrations/",
]
typeCheckingMode = "strict"
enableTypeIgnoreComments = false
reportUnusedFunction = true

[tool.ruff]
line-length = 100
extend-exclude = ["build/", "typings/", "migrations/"]

[tool.ruff.lint]
select = [
    "CPY",    # flake8-copyright
    "F",      # Pyflakes
    "E",      # pycodestyle
    "W",      # pycodestyle
    "C90",    # mccabe
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
    "FBT",    # flake8-boolean-trap
    "B",      # flake8-bugbear
    "DTZ",    # flake8-datetimez
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimeZ
    "ISC",    # flake8-implicit-str-concat
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib,
    "PL",     # Pylint
    "PERF",   # Perflint
    "RUF100", # Automatic noqa management,
]
ignore = [
    "FBT003",  # Boolean positional value in function call
    "ISC001",  # single line implicit string concatenation, conflict with formatter
    "PLR6301", # Method could be a function, class method, or static method
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition
    "PLR0914", # Too many local variables
    "PLR0915", # Too many statements
    "PLR0917", # Too many positional arguments
    "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
    "E501",    # Line too long
]
preview = true

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.format]
preview = true
